kubernetes/platforms-depl.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platform-service
          image: adisoncavani/platform-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1

kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  selector:
    app: clusterip
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platform-service-grpc
      procotol: TCP
      port: 666
      targetPort: 666
