kubernetes/platforms-np-srv.yaml
apiVersion: v1

kind: Service
metadata:
  name: platform-service-srv
spec:
  type: NodePort
  selector:
    app: platform-service
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
